# PyMolFit

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: physics_parity_audit.md  science_readiness_validation.md
examples/: physical_hitran_demo.py  synthetic_demo.py
local_tests/: __init__.py  audit_xshooter_fixed_rt_parity.py  benchmark_fair_runtime.py  benchmark_molecfit_runtime.py  calibrate_rho01_physics_conventions.py  compare_betapic_harps_nad.py  compare_betapic_harps_o2.py  compare_keck_hires_bd17_o2.py  compare_keck_kpf_vega_o2.py  compare_nad_exclude_ranges.py  compare_rho01_genmolfit_molecfit_lband.py  compare_rho01_pymolfit_molecfit_lband.py  compare_uves_broadspan_timed.py  compare_uves_official_demo.py  compare_uves_specific_vs_generic_atmosphere.py  diagnose_rho01_direct_mismatch.py  diagnose_rho01_mismatch.py  make_blind_review_packet.py  molecfit_reference_data.py  run_science_readiness_validation.py  validate_authenticated_hitran.py
local_tests/lblrtm_audit/: audit_notes.md  run_external_golden_audit.py  run_single_line_audit.py
local_tests/science_readiness/data/: README.md
src/genmolfit/: aer_data.py  atmosphere.py  cli.py  components.py  continuum.py  fit.py  gdas.py  hitran.py  line_data.py  linelist.py  model.py  partition.py  physics.py  plotting.py  provenance.py  radiative_transfer.py  spectrum.py  validation.py  workflow.py
src/genmolfit/data/: lblrtm_v12_11_co2_continuum.npz  lblrtm_v12_11_h2o_continuum.npz  lblrtm_v12_11_tips.npz
src/genmolfit/data/profiles/gdas/: GDAS_t0_s2.fits  GDAS_t0_s3.fits
src/genmolfit/data/profiles/mipas/: std.fits  tro.fits
src/pymolfit/: __init__.py  aer_data.py  atmosphere.py  cli.py  continuum.py  diagnostics.py  fit.py  gdas.py  hitran.py  io.py  line_data.py  model.py  partition.py  physics.py  plotting.py  provenance.py  systematics.py  validation.py  workflow.py
src/pymolfit/data/: lblrtm_v12_11_n2_fundamental.npz  lblrtm_v12_11_o2_continuum.npz
src/pymolfit/data/profiles/gdas/: GDAS_t0_s1.fits  GDAS_t0_s4.fits  GDAS_t0_s5.fits  GDAS_t0_s6.fits
src/pymolfit/data/profiles/mipas/: equ.fits
tests/: test_aer_data.py  test_api_documentation.py  test_atmosphere.py  test_cli.py  test_components.py  test_continuum.py  test_external_absorption.py  test_fit.py  test_fit_controls.py  test_gdas.py  test_io.py  test_lblrtm_audit.py  test_line_data.py  test_model.py  test_molecfit_reference_data.py  test_physics_hitran.py  test_physics_parity.py  test_release_tools.py  test_spectrum.py  test_systematics.py  test_validation.py  test_validation_review.py  test_workflow.py
tools/: extract_lblrtm_n2_fundamental.py  extract_lblrtm_o2_continuum.py  extract_lblrtm_tips.py
tutorials/: .gitattributes  01_quickstart.ipynb  02_nad_detailed_fit.ipynb  03_full_echelle_spectrum.ipynb  04_atmosphere_and_metadata.ipynb  05_diagnostics_and_troubleshooting.ipynb  README.md
tutorials/data/: README.md  harps_nad_crop_air.fits  harps_o2_bband_crop_air.fits  hires_bd17_o2_topocentric_vacuum.fits
