[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genmolfit"
version = "0.1.0"
description = "Generic pure-Python telluric fitting and correction with source-audited radiative-transfer physics."
readme = "README.md"
license = { text = "Scientific/research use; see THIRD_PARTY_NOTICES.md for bundled AER data terms" }
requires-python = ">=3.10"
authors = [
    { name = "Nikolas Valsamidis" }
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "astropy>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
examples = [
    "matplotlib>=3.7",
]
plot = [
    "matplotlib>=3.7",
]

[project.scripts]
genmolfit = "genmolfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["THIRD_PARTY_NOTICES.md"]

[tool.setuptools.package-data]
genmolfit = [
    "data/*.npz",
    "data/profiles/gdas/*.fits",
    "data/profiles/mipas/*.fits",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
