[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymolfit"
version = "0.3.0"
description = "Generic pure-Python telluric fitting and correction with source-audited radiative-transfer physics."
readme = "README.md"
license = { text = "Scientific/research use; see THIRD_PARTY_NOTICES.md for bundled AER data terms" }
requires-python = ">=3.10"
keywords = [
    "astronomy",
    "radiative transfer",
    "spectroscopy",
    "telluric correction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
authors = [
    { name = "Nikolas Valsamidis" }
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "astropy>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
examples = [
    "matplotlib>=3.7",
]
plot = [
    "matplotlib>=3.7",
]

[project.scripts]
pymolfit = "pymolfit.cli:main"

[project.urls]
Homepage = "https://github.com/nikolasvalsamidis97/PyMolFit"
Issues = "https://github.com/nikolasvalsamidis97/PyMolFit/issues"
Repository = "https://github.com/nikolasvalsamidis97/PyMolFit.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["THIRD_PARTY_NOTICES.md"]

[tool.setuptools.package-data]
pymolfit = [
    "py.typed",
    "data/*.npz",
    "data/profiles/gdas/*.fits",
    "data/profiles/mipas/*.fits",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
